[package]
name = "simple-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stc"
path = "src/bin/stc.rs"

[[bin]]
name = "sts"
path = "src/bin/sts.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rmp-serde = "1.1.2"
mio = { version = "0.8.10", features = ["os-poll", "net"] }
mio-misc = "2.0.0"
socket2 = "0.5.5"
libc = "0.2.153"
oneshot = "0.1.6"
ctrlc = "3.4.2"
rmp = "0.8.12"
