[package]
name = "simple-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stc"
path = "src/bin/stc.rs"

[[bin]]
name = "sts"
path = "src/bin/sts.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rmp-serde = "1.1.2"
socket2 = "0.5.5"
libc = "0.2.153"
rmp = "0.8.12"
tokio = { version = "1.36.0", features = ["parking_lot", "rt", "rt-multi-thread", "io-util", "net", "macros", "sync"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["messagepack"] }
futures = "0.3.30"
thiserror = "1.0.57"

[dev-dependencies]
httptest = "0.15.5"
reqwest = "0.11.24"
test_bin = "0.4.0"
