[package]
name = "simple-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stc"
path = "src/bin/stc.rs"

[[bin]]
name = "sts"
path = "src/bin/sts.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
rmp-serde = "1.1.2"
libc = "0.2.153"
rmp = "0.8.12"
tokio = { version = "1.36.0", features = ["parking_lot", "rt-multi-thread", "io-util", "net", "macros", "sync", "fs", "signal", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["messagepack"] }
futures = "0.3.30"
webpki-roots = "0.26.1"
color-eyre = "0.6.2"
snafu = "0.8.1"
serde_bytes = "0.11.14"
argon2 = "0.5.3"
socket2 = { version = "0.5.8", features = ["all"] }
quinn = { version = "0.11.6", features = ["rustls-ring"] }
quinn-proto = { version = "0.11.9", features = ["rustls-ring"] }
rustls = "0.23.22"
rustls-pki-types = "1.11.0"
rustls-platform-verifier = "0.5.0"
tokio-rustls = "0.26.1"
itertools = "0.14.0"
x509-parser = "0.17.0"

[dev-dependencies]
httptest = "0.15.5"
portpicker = "0.1.1"
reqwest = "0.12.12"
rmp-serde = "1.1.2"
test_bin = "0.4.0"
